update CMakeLists.txt and add todo list

--- a/makeDemo/CMakeLists.txt
+++ b/makeDemo/CMakeLists.txt
@@ -1,20 +1,22 @@
 # cmake version
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required (VERSION 3.2)
 
 # project name
-project(makeDemo)
+project (makeDemo)
 
 # head file path
-# INCLUDE_DIRECTORIES(.)
+# INCLUDE_DIRECTORIES (.)
 
 # source path
-# AUX_SOURCE_DIRECTORY(. DIR_SRCS)
+# AUX_SOURCE_DIRECTORY (. DIR_SRCS)
 
-file(GLOB SOURCES)
+# file (GLOB SOURCES)
 
-# add executable file 添加编译的可执行文件
-add_executable(ChainList mylib.h mylib.c text.c)
+aux_source_directory(./src/ DIR_SRCS)
+# 添加编译文件
+# add_executable( mylib.h mylib.c text.c)
 
 # add link library
 #TARGET_LINK_LIBRARIES(${PROJECT_NAME} m)
 
+# CMakeLists.txt refer to https://www.hahack.com/codes/cmake/
