--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "projects/rss"]
-	path = projects/rss
-	url = git@github.com:bGZoCg/rss.git
+[submodule "projects/rssant-backup"]
+	path = projects/rssant-backup
+	url = git@github.com:bGZoCg/rssant-backup.git
 [submodule "tasks/Projects"]
 	path = tasks/Projects
 	url = git@github.com:bGZoCg/Projects.git
@@ -10,3 +10,6 @@
 [submodule "tools/dotfiles"]
 	path = tools/dotfiles
 	url = git@github.com:bGZoCg/dotfiles.git
+[submodule "projects/2022"]
+	path = projects/2022
+	url = git@github.com:bGZo/2022.git
